--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
 .white-font{
-	color: white !important;	
+	color: white !important;
 }
 
 .black-font{
@@ -34,9 +34,9 @@
 
 body{
   font-family: 'Varela Round', sans-serif !important;
-  background-image: url('/safe.gg/images/background/camilleBG.jpg'); 
-  background-size: 100%; 
-  background-repeat: no-repeat; 
+  background-image: url('/images/background/camilleBG.jpg');
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 .line {
