Cards de vitória e derrota

--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -102,5 +102,12 @@ body{
   border-color: #bbb9b9;
 }
 
+.card-lose{
+  background-image: linear-gradient(to right, #981c1c, #1d002e);
+  border-right: unset;
+}
 
-
+.card-win{
+  background-image: linear-gradient(to right, #243f71 , #1d002e);
+  border-right: unset;
+}
