--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@
 
 body{
   font-family: 'Varela Round', sans-serif !important;
-  background-image: url('/images/background/camilleBG.jpg');
+  /* background-image: url('/images/background/camilleBG.jpg'); */
   background-size: 100%;
   background-repeat: no-repeat;
 }
