--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,7 +62,7 @@ body{
     bottom: 20%;
 }
 .card{
-	width: 500px;
+	width: 100%;
     height: 300px;
     margin: auto auto;
     background: #383030;
@@ -71,9 +71,10 @@ body{
     webkit-box-shadow: 0px 0px 64px 0px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0px 0px 64px 0px rgba(0,0,0,0.6);
 	box-shadow: 0px 0px 64px 0px rgba(0,0,0,0.6);
-	text-align: center;
-
+    text-align: center;
 }
+
+
 .card-content{
 	transform-style: preserve-3d;
 	height: 100%;
