--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -134,6 +134,12 @@ body{
     color: #cecece;
 }
 
+.card-bars{
+  color: #cecece;
+  padding-right: 1px;
+  padding-left: 1px;
+}
+
 .circle-card{
     font-size: 0.1rem !important;
     padding-left: 5px;
