--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,21 @@ body{
   background-repeat: no-repeat;
 }
 
+.kaisa-bg{
+	height: 100%; 
+	background-color: #37003f; 
+	background-image: url('../images/background/kaisaBG2.png');
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover; 
+	opacity: 1;	
+}
+
+.section-row{
+	height: 700px;
+	
+}
+
 .line {
 	margin:0 0 1em;
 	line-height:2em;
