--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -60,12 +60,25 @@ p{
   border-radius: 100px;
   border-color: #a300ff !important;
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .btn-follow:hover{
   color: white !important;
   background-color: #a300ff !important;
+}
+
+.btn-following{
+  color: white !important;
+  border-radius: 100px;
+  border-color: #4a0074 !important;
+  background-color: #4a0074;
+  width: 100%;
+}
+
+.btn-following:hover{
+  color: white !important;
+  background-color: #7700bb !important;
+  border-color: #7700bb !important;
 }
 
 .user-card-pos{
