--- a/public/css/findplayer.css
+++ b/public/css/findplayer.css
@@ -1,3 +1,13 @@
+.form-container{
+	margin-left: 25px;
+	margin-right:25px;
+	margin-bottom:10px;
+}
+
+.title{
+	font-size: 24px;
+}
+
 #csgo-find{
 	display: none;
 }
@@ -29,6 +39,10 @@
 }
 .radio-image label > input:checked + img{ 
     border:4px solid #3F51B5;
+}
+
+#feedback{
+	margin-left: 15px;
 }
 
 
