--- a/public/css/grenades.css
+++ b/public/css/grenades.css
@@ -1,9 +1,15 @@
 html {
     height: 100%;
   }
+  .voltar{
+    font-size: 20px;
+  }
+  #back{
+    display:none;
+  }
   body {
     height: 100%;
-    background-color: #333;
+    background-color: #37003f;
     color: #fff;
   }
   #mapRow {
@@ -40,6 +46,7 @@ html {
     z-index: 1;
     border-radius: 2%;
     border: 1px solid #333;
+    margin-top: 10px;
   }
   .imgContainer:hover > .thumbnail > .mapPic {
     transform: scale(1.1);
