--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -81,7 +81,7 @@ p{
 }
 
 body{
-	background-color: #2c0045;
+	background-color: #30353B;
 }
 
 
@@ -178,13 +178,14 @@ body{
 }
 
 .feed-post{
-  height: 155px;
+  height: 10rem;
   margin-bottom: 5px;
 }
 
 .feed-post-textarea{
   margin: 10px 30px 7px 30px;
-  border: 1px solid #3d274b;
+  border:none;
+  background-color: #30353B;
   border-radius: 10px;
   padding: 10px 10px;
   resize: none;
@@ -219,12 +220,12 @@ textarea::-moz-input-placeholder {
 }
 
 .fa-heart:hover{
-  font-size: 14px;
-  transition: font-size 0.3s;
+  transform: scale(1.3);
+  transition: all 0.2s;
 }
 
 .fa-heart{
-  transition: font-size 0.3s;
+  transition: all 0.2s;
 }
 
 .form-control{
@@ -264,7 +265,7 @@ textarea::-moz-input-placeholder {
 }
 
 .scroll {
-  max-height: 490px;
+  max-height: 60rem;
   overflow-y: auto;
   overflow-x: hidden;
   
@@ -275,15 +276,19 @@ textarea::-moz-input-placeholder {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ae21ff; 
+  background: #25262A; 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #4a0074; 
+  background: #ff9933; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background:#4a0074; 
+  background:	#ff8000; 
+}
+
+.a{
+  color: #ff8000;
 }
