--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+.body{
+    background-color: #212529;
+}
 
-body{
-    font-family: 'Raleway', sans-serif;
-    background-image:none;
-    background-color: #37003f;
+.section-info{
+    height: 45rem;
 }
 
 .form{
@@ -13,12 +13,29 @@ body{
     box-shadow: 6px 12px 30px 14px rgba(0,0,0,0.66);
 }
 
+.text-index{
+    text-shadow: 0 0 15px rgba(0,0,0,.8), 0 0 10px rgba(0,0,0,.8);
+}
+
 .form-div{
 	margin-left: 12em;
 }
 
+hr{
+    border-color:#626262;
+}
+
+.btn-outline-light{
+    transition: all 0.3s;
+}
+
 .btn-outline-light:hover{
-	color: black !important;
+    border-radius: 15px;
+    transform: scale(1.1);
+    color: black !important;
+    box-shadow: 3px 10px 32px -4px rgba(20,20,20,1);
+    transition: all 0.3s;
+    
 }
 
 .title{
@@ -69,6 +86,7 @@ body{
     top: 80%;
     bottom: 20%;
 }
+
 .card{
 	width: 100%;
     height: 300px;
