--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
+
+.btn-outline-light{
+    transition: all 0.3s;
+}
+
+.btn-outline-light:hover{
+    border-radius: 15px;
+    transform: scale(1.1);
+    color: black !important;
+    box-shadow: 3px 10px 32px -4px rgba(20,20,20,1);
+    transition: all 0.3s;
+    
+}
+
 .bg-gray{
 	background-color: #212529;
 }
@@ -291,21 +305,6 @@ body{
 [data-tooltip]:hover:after {
 	display: block;
 	z-index: 50;
-}
-
-.dropdown-menu{
-	background-color: #230138;
-}
-
-.dropdown-item{
-	color:rgba(255,255,255,.5);
-}
-
-.dropdown-item:hover{
-	color: #fff;
-	background-color: #3d274b;;
-	transition: background-color 0.5s;
-	transition: color 0.5s;
 }
 
 .btn-follow{
