Ajuste nas cores de algumas paginas

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,6 +129,7 @@ button {
   }
   
 body{
+	background-color: #30353B;
 	font-family: 'Oswald', sans-serif;
   	background-size: 100%;
   	background-repeat: no-repeat;
