--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,14 +43,17 @@
 }
 
 .alertify-notifier .ajs-message.ajs-error{
+    color: #fff;
     border-color: rgba(217,92,92,.95);
 	font-family: 'Raleway', sans-serif;
+	border-radius: 3px;
 }
 
 .alertify-notifier .ajs-message.ajs-success {
     color: #fff;
     border-color: rgba(91,189,114,.95);
 	font-family: 'Raleway', sans-serif;
+	border-radius: 3px;
 }
 
 .card{
