--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,6 +43,14 @@
 	color: #d16900 !important;
 }
 
+.green-font{
+    color: #22917B
+}
+
+.mt{
+	margin-top: 1rem;
+}
+
 .alertify-notifier .ajs-message.ajs-error {
 	color: #fff;
 	border-color: rgba(217, 92, 92, .95);
@@ -170,6 +178,11 @@ body {
 	left: auto;
 	width: 999em;
 	margin: 0 0 0 1em;
+}
+
+.row{
+	margin-left: 0;
+	margin-right: 0;
 }
 
 .navbarfeed {
