--- a/public/css/skeleton-loader.css
+++ b/public/css/skeleton-loader.css
@@ -1,1 +1,130 @@
-.ph-item{position:relative;display:flex;flex-wrap:wrap;padding:30px 15px 15px;overflow:hidden;margin-bottom:30px;background-color:#1d002e;border:1px solid #1d002e;border-radius:2px}.ph-item,.ph-item *,.ph-item :after,.ph-item :before{box-sizing:border-box}.ph-item:before{content:" ";position:absolute;top:0;right:0;bottom:0;left:50%;z-index:1;width:500%;margin-left:-250%;-webkit-animation:phAnimation .8s linear infinite;animation:phAnimation .8s linear infinite;background:linear-gradient(90deg,#1d002e00 46%,#1d002e59 50%,#1d002e00 54%) 50% 50%}.ph-item>*{flex:1 1 auto;display:flex;flex-flow:column;padding-right:15px;padding-left:15px}.ph-row{display:flex;flex-wrap:wrap;margin-bottom:7.5px}.ph-row div{height:10px;margin-bottom:7.5px;background-color:#350a4e}.ph-row .big,.ph-row.big div{height:20px;margin-bottom:15px}.ph-row .empty{background-color:hsla(0,0%,100%,0)}.ph-col-2{flex:0 0 16.66667%}.ph-col-4{flex:0 0 33.33333%}.ph-col-6{flex:0 0 50%}.ph-col-8{flex:0 0 66.66667%}.ph-col-10{flex:0 0 83.33333%}.ph-col-12{flex:0 0 100%}.ph-avatar{position:relative;width:100%;min-width:60px;background-color:#350a4e;margin-bottom:15px;border-radius:50%;overflow:hidden}.ph-avatar:before{content:" ";display:block;padding-top:100%}.ph-picture{width:100%;height:120px;background-color:#350a4e;margin-bottom:15px}@-webkit-keyframes phAnimation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}@keyframes phAnimation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}
+.ph-item {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 15px 15px;
+    overflow: hidden;
+    margin-bottom: 30px;
+    background-color: #25262a;
+    border: 1px solid #25262a;
+    border-radius: 2px
+}
+
+.ph-item,
+.ph-item *,
+.ph-item :after,
+.ph-item :before {
+    box-sizing: border-box
+}
+
+.ph-item:before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+    z-index: 1;
+    width: 500%;
+    margin-left: -250%;
+    -webkit-animation: phAnimation .8s linear infinite;
+    animation: phAnimation .8s linear infinite;
+    background: linear-gradient(90deg, #25262a00 46%, #25262a59 50%, #25262a00 54%) 50% 50%
+}
+
+.ph-item>* {
+    flex: 1 1 auto;
+    display: flex;
+    flex-flow: column;
+    padding-right: 15px;
+    padding-left: 15px
+}
+
+.ph-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 7.5px
+}
+
+.ph-row div {
+    height: 10px;
+    margin-bottom: 7.5px;
+    background-color: #30353B
+}
+
+.ph-row .big,
+.ph-row.big div {
+    height: 20px;
+    margin-bottom: 15px
+}
+
+.ph-row .empty {
+    background-color: hsla(0, 0%, 100%, 0)
+}
+
+.ph-col-2 {
+    flex: 0 0 16.66667%
+}
+
+.ph-col-4 {
+    flex: 0 0 33.33333%
+}
+
+.ph-col-6 {
+    flex: 0 0 50%
+}
+
+.ph-col-8 {
+    flex: 0 0 66.66667%
+}
+
+.ph-col-10 {
+    flex: 0 0 83.33333%
+}
+
+.ph-col-12 {
+    flex: 0 0 100%
+}
+
+.ph-avatar {
+    position: relative;
+    width: 100%;
+    min-width: 60px;
+    background-color: #30353B;
+    margin-bottom: 15px;
+    border-radius: 50%;
+    overflow: hidden
+}
+
+.ph-avatar:before {
+    content: " ";
+    display: block;
+    padding-top: 100%
+}
+
+.ph-picture {
+    width: 100%;
+    height: 120px;
+    background-color: #30353B;
+    margin-bottom: 15px
+}
+
+@-webkit-keyframes phAnimation {
+    0% {
+        transform: translate3d(-30%, 0, 0)
+    }
+
+    to {
+        transform: translate3d(30%, 0, 0)
+    }
+}
+
+@keyframes phAnimation {
+    0% {
+        transform: translate3d(-30%, 0, 0)
+    }
+
+    to {
+        transform: translate3d(30%, 0, 0)
+    }
+}
