--- a/public/css/profilechampion.css
+++ b/public/css/profilechampion.css
@@ -1,35 +1,33 @@
-.champion-splash{
+.champion-splash {
     height: 30rem;
     background-position: center;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
 }
 
-.champion-history{
+.champion-history {
     margin-top: 12rem;
     padding: 3rem;
     text-align: justify;
     text-justify: inter-word;
 }
 
-.champion-about{
-    background: rgb(13,12,11);
-    background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(13,12,11) 58%);
+.champion-about {
+    background: rgb(13, 12, 11);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(13, 12, 11) 58%);
 }
 
-.champion-name{
+.champion-name {
     text-transform: uppercase;
-    font-size: 64px;
-    color: #8161d0;
+    font-size: 5rem;
 }
 
-.champion-sub-name{
+.champion-sub-name {
     text-transform: uppercase;
-    font-size: 16px;
-    color: #8161d0;
+    font-size: 1rem;
 }
 
-.champion-name-bg{
-    background: rgb(13,12,11);
-    background: linear-gradient(180deg, rgba(2,0,36,0) 0%, rgba(13,12,11) 100%);
+.champion-name-bg {
+    background: rgb(13, 12, 11);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(13, 12, 11) 100%);
 }
