--- a/public/css/grenades.css
+++ b/public/css/grenades.css
@@ -1,9 +1,22 @@
-html {
-    height: 100%;
-  }
 .voltar{
   font-size: 20px;
 }
+
+.map-card{
+  cursor: pointer;
+  z-index:0;
+  width: 100%;
+  height: 60vh;
+  transition: all 0.3s;
+}
+
+.map-card:hover{
+  border: 1px solid #879292;
+  z-index: 10;
+  width: 120%;
+  transition: all 0.3s;
+}
+
 #back{
   display:none;
 }
@@ -34,25 +47,11 @@ a.thumbnail:hover {
   color: white;
   margin-bottom: 20px;
 }
-.imgContainer {
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  border-radius: 2%;
-  border: 1px solid #333;
-  margin-top: 10px;
+
+.map-name{
+  font-size: 2rem;
 }
-.imgContainer:hover > .thumbnail > .mapPic {
-  transform: scale(1.1);
-}
-.imgContainer:hover {
-  border-color: #fff;
-}
-.h1 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
+
 .noLinkLook {
   color: #fff;
 }
